@@ -289,7 +289,7 @@ public class DecimateHalfEdge
 		Stack notContracted = new Stack();
 		Vertex v1 = null, v2 = null;
 		Quadric3DError q1 = null, q2 = null;
-		Vertex v3 = new Vertex(0.0, 0.0, 0.0);
+		Vertex v3 = mesh.newVertex(0.0, 0.0, 0.0);
 		Quadric3DError q3 = new Quadric3DError();
 		while (tree.size() > 0 && nrTriangles > nrFinal)
 		{
